--- a/index.html
+++ b/index.html
@@ -2,13 +2,7 @@
 layout: default
 title: MobileWebUI.COM
 ---
-<div class="box-container">
-	<div class="container">
-		1111
-	</div>
-</div>
-<div class="box-container">
-	<div class="container">
-		2222
-	</div>
+<div class="main">
+<section>1111</section>
+<section>2222</section>
 </div>
