--- a/index.html
+++ b/index.html
@@ -2,7 +2,59 @@
 layout: default
 title: MobileWebUI.COM
 ---
-<div class="main">
-<section>1111</section>
-<section>2222</section>
-</div>
+<!-- header -->
+<!-- article -->
+<header id="header">
+	<div class="container">
+		<div class="row">
+			<div class="col-sm-4 title">
+				MobileWebUI.COM
+			</div>
+		</div>
+	</div>
+</header>
+<article>
+<section id="intro-page">
+	<div id='intro-slider' class='swipe'>
+		<div class='swipe-wrap'>
+			<div class="swipe-item"><img src="/assets/img/archea.jpg" alt=""></div>
+			<div class="swipe-item"><img src="/assets/img/sloppy_gamer.jpg" alt=""></div>
+			<div class="swipe-item"><img src="/assets/img/notepad_and_coffee.jpg" alt=""></div>
+			<div class="swipe-item"><img src="/assets/img/sushi.jpg" alt=""></div>
+		</div>
+	</div>
+	<div class="slider-bullets">
+		<div data-index="0" class="slider-bullet selected"><span></span></div>
+		<div data-index="1" class="slider-bullet"><span></span></div>
+		<div data-index="2" class="slider-bullet"><span></span></div>
+		<div data-index="3" class="slider-bullet"><span></span></div>
+	</div>
+	<div id="intro-content">
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-4">
+					<!-- <div class="title">
+									MobileWebUI.COM
+					</div> -->
+					<div class="slogan">
+						Make you work smart .
+					</div>
+					<div class="remark">
+						There are many amazing framework or library for the mobile web . but , before you use it , you hava to know it .
+					</div>
+				</div>
+				<div class="col-sm-8">
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
+<section id="product-page" style="height:1000px;">2222</section>
+</article>
+<!-- <section id="product-page">2222</section>
+<section id="dialog-page">2222</section>
+<section id="font-page">2222</section>
+<section id="calendar-page">2222</section>
+<section id="page-page">2222</section>
+<section id="framework-page">2222</section>
+-->
