--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@ title: MobileWebUI.COM
 ---
 <!-- header -->
 <!-- article -->
+<div class="page-loading">
+	<div class="spinner">
+		<div class="rect1"></div>
+		<div class="rect2"></div>
+		<div class="rect3"></div>
+		<div class="rect4"></div>
+		<div class="rect5"></div>
+	</div>
+</div>
 <header id="header">
 	<div class="container">
 		<div class="row">
@@ -13,7 +22,7 @@ title: MobileWebUI.COM
 		</div>
 	</div>
 </header>
-<article>
+<article id="article">
 <section id="intro-page">
 	<div id='intro-slider' class='swipe'>
 		<div class='swipe-wrap'>
@@ -33,9 +42,6 @@ title: MobileWebUI.COM
 		<div class="container">
 			<div class="row">
 				<div class="col-sm-4">
-					<!-- <div class="title">
-									MobileWebUI.COM
-					</div> -->
 					<div class="slogan">
 						Make you work smart .
 					</div>
