--- a/index.html
+++ b/index.html
@@ -135,6 +135,11 @@ title: MobileWebUI.COM
 		</div>
 	</div>
 </section>
+<section>
+	<div style="width:100%;text-align:center;">
+		<a href="www.miitbeian.gov.cn">粤ICP备13014551号-1</a>
+	</div>
+</section>
 </article>
 <!-- <section id="product-page">2222</section>
 <section id="dialog-page">2222</section>
