--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@ title: MobileWebUI.COM
 	</div>
 </section>
 <section>
-	<div style="width:100%;text-align:center;">
-		<a href="www.miitbeian.gov.cn">粤ICP备13014551号-1</a>
+	<div style="width:100%;text-align:center;padding:20px;">
+		<a href="http://www.miitbeian.gov.cn/">粤ICP备13014551号-1</a>
 	</div>
 </section>
 </article>
